# SSDD_2324

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml  site.yml
client/: client.py  icedrive.ice
config/: app.ini  blob.config  data_transfer.config
doc/: .gitignore  Makefile  styles.html
doc/src/: apuntes_sobre_interfaces.puml  index.md  inicio_servicio.puml  interfaces.puml  uso_interfaces.puml
doc/src/app/: hilo_announce.puml
icedrive_blob/: app.py  blob.py  delayed_response.py  discovery.py
tests/: mocks.py  test_data.py  test_directory.py  test_discovery.py  test_interactions.py
