[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icedrive-blob"
version = "0.0.1"
authors = [
  { name="Samuel Espejo Gil", email="samuel.espejo@alu.uclm.es" },
]
description = "Implementation of IceDrive Blob service"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
dependencies = [
    "zeroc-ice>=3.7",
]

[project.optional-dependencies]
tests = ["pytest"]
linters = ["black", "ruff", "pydocstyle"]

[project.urls]
"Repository" = "https://github.com/RedBed24/SSDD_2324"
"Homepage" = "https://redbed24.github.io/SSDD_2324"

[project.scripts]
icedrive-blob = "icedrive_blob.app:main"
